# currency_converter

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
converter_app/: conftest.py  manage.py  pytest.ini
converter_app/converter/: admin.py  models.py  serializers.py  urls.py  views.py
converter_app/converter/migrations/: 0001_initial.py  0002_prices_create_date_prices_update_date_and_more.py  0003_alter_prices_create_date_alter_product_create_date.py  0004_alter_prices_unique_together_and_more.py
converter_app/converter_app/: asgi.py  settings.py  settings_prod.py  urls.py  wsgi.py
converter_app/tests/: factories.py  test_api.py  test_models.py
postman_collection/: API_tests.postman_collection.json
