[tool.poetry]
name = "pythondjangoproject"
version = "0.1.0"
description = ""
authors = ["Regiane <nascire@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1"
djangorestframework = "^3.13.1"
pytest-django = "^4.5.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
